--- a/student-dashboard/index.html
+++ b/student-dashboard/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" dir="ltr">
 
@@ -14,9 +14,6 @@
 
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-</head>
-
-<body>
 
   <style>
     /* General CSS styling */
@@ -126,6 +123,11 @@
     }
 
   </style>
+
+
+</head>
+
+<body>
 
 
 <div class="links">
@@ -300,10 +302,10 @@
 
                 </div>
 
-                <div class="col-4 text-end">
-                  <p class="weekday ms-3 me-1 mt-4">Monday</p>
-                  <p class="dates mt-n2 ms-3 me-1">Sep 1, 2020</p>
-                  <p class="days mt-n1 ms-3 me-1">4 Days</p>
+                <div class="col-4 col-md-6 text-end">
+                  <p class="weekday ms-3 me-3 mt-4">Monday</p>
+                  <p class="dates mt-n2 ms-3 me-3">Sep 1, 2020</p>
+                  <p class="days mt-n1 ms-3 me-3">4 Days</p>
                 </div>
               </div>
 
@@ -430,7 +432,7 @@
 
                 </div>
 
-                <div class="col-4 text-end">
+                <div class="col-4 col-md-6 text-end">
                   <p class="weekday ms-3 me-3 mt-4">Monday</p>
                   <p class="dates mt-n2 ms-3 me-3">Sep 1, 2020</p>
                   <p class="days mt-n1 ms-3 me-3">4 Days</p>
